Add initial project files for EcoTracker API and monitoring tools
- Added QR code image files for API responses.
- Created fly.toml configuration for deployment on Fly.io.
- Implemented a Python script to monitor Fly.io usage and provide cost-saving recommendations.
- Developed an HTML page for testing QR code generation and API responses.

--- a/ecotracker/index.html
+++ b/ecotracker/index.html
@@ -29,5 +29,9 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script src="/qrcode-check.js"></script>
+    
+    <!-- Development helpers - can be removed in production -->
+    <script src="/dev-helpers.js"></script>
   </body>
 </html>
