Update QR code URLs to point to the new EcoTracker Sable instance

--- a/qr-test.html
+++ b/qr-test.html
@@ -67,11 +67,11 @@
     <div class="test-card">
         <h2>2. QR Code with Custom Parameters</h2>
         <div class="qr-container">
-            <img id="customQrImage" alt="QR Code" src="https://ecotracker-api.fly.dev/qrcode?url=https://ecotracker-vercel.vercel.app/&color=FF5733&title=Custom+QR">
+            <img id="customQrImage" alt="QR Code" src="https://ecotracker-api.fly.dev/qrcode?url=https://ecotracker-sable.vercel.app/&color=FF5733&title=Custom+QR">
         </div>
         <div class="buttons">
-            <button onclick="refreshImage('customQrImage', 'https://ecotracker-api.fly.dev/qrcode?url=https://ecotracker-vercel.vercel.app/&color=FF5733&title=Custom+QR')">Refresh</button>
-            <button onclick="openUrl('https://ecotracker-api.fly.dev/qrcode?url=https://ecotracker-vercel.vercel.app/&color=FF5733&title=Custom+QR')">Open in New Tab</button>
+            <button onclick="refreshImage('customQrImage', 'https://ecotracker-api.fly.dev/qrcode?url=https://ecotracker-sable.vercel.app/&color=FF5733&title=Custom+QR')">Refresh</button>
+            <button onclick="openUrl('https://ecotracker-api.fly.dev/qrcode?url=https://ecotracker-sable.vercel.app/&color=FF5733&title=Custom+QR')">Open in New Tab</button>
         </div>
     </div>
     
@@ -80,7 +80,7 @@
         <p>Click the button below to open the HTML QR code page in a new tab:</p>
         <div class="buttons">
             <button onclick="openUrl('https://ecotracker-api.fly.dev/qrcode-html')">Open HTML QR Page</button>
-            <button onclick="openUrl('https://ecotracker-api.fly.dev/qrcode-html?url=https://ecotracker-vercel.vercel.app/&color=FF5733&title=Custom+QR')">Open Custom HTML QR Page</button>
+            <button onclick="openUrl('https://ecotracker-api.fly.dev/qrcode-html?url=https://ecotracker-sable.vercel.app/&color=FF5733&title=Custom+QR')">Open Custom HTML QR Page</button>
         </div>
     </div>
     
